@@ -34,6 +34,9 @@ dan-h <dan-h at users dot sourceforge dot net>
 David McCabe
   utime
 
+Ram Yalamanchili
+  tztime
+
 Daniel Thiele <dthiele at gmx dot net>
   APM support for FreeBSD
 
